Fix regressions sub-menu titles on mobile-view

--- a/client/src/app/+my-account/my-account-subscriptions/my-account-subscriptions.component.scss
+++ b/client/src/app/+my-account/my-account-subscriptions/my-account-subscriptions.component.scss
@@ -45,11 +45,11 @@ input[type=text] {
   }
 }
 
-@media screen and (max-width: $small-view) {
-  .video-channels-header {
-    text-align: center;
-  }
+.video-subscriptions-header {
+  margin-bottom: 30px;
+}
 
+@media screen and (max-width: $small-view) {
   .video-channel {
     .video-channel-info {
       padding-bottom: 10px;
@@ -64,6 +64,16 @@ input[type=text] {
 
     img {
       margin-right: 0;
+    }
+  }
+}
+
+@media screen and (max-width: $mobile-view) {
+  .video-subscriptions-header {
+    flex-direction: column;
+
+    input[type=text] {
+      width: 100% !important;
     }
   }
 }
