--- a/client/src/app/+my-account/my-account-video-playlists/my-account-video-playlists.component.scss
+++ b/client/src/app/+my-account/my-account-video-playlists/my-account-video-playlists.component.scss
@@ -37,6 +37,10 @@ input[type=text] {
   }
 }
 
+.video-playlists-header {
+  margin-bottom: 30px;
+}
+
 @media screen and (max-width: $small-view) {
   .video-playlists-header {
     text-align: center;
@@ -58,14 +62,6 @@ input[type=text] {
 
     .miniature-name {
       max-width: $video-thumbnail-width;
-    }
-  }
-}
-
-@media only screen and (min-width: $mobile-view) and (max-width: $small-view) {
-  .video-playlists-header {
-    input[type=text] {
-      width: 42% !important;
     }
   }
 }
